smartspim_workflow/logs/smartspim_reg_22271328.err
  File "spim_register.py", line 76
    print("------------------- {} TO {} IN {} ------------------".format(mv,fx,out))        
    ^
IndentationError: unexpected indent
